feat: split lore components